Completing the DSM conversion program